Fix info bar overlapping with the map

--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ footer {
   background: black;
   color: white;
   position: absolute;
-  bottom: 0px;
+  bottom: -1em;
   width: 100%;
 }
 
